# oopc_cmake_stu

./: .gitmodules  CMakeLists.txt  Kconfig  readme.md
project/: macro_isolation.h  main.c  my_config.h  prj.conf
scripts/kconfig/: Kconfig
